--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "^9.20"
     },
     "require-dev": {
