--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "*",
+        "phpoffice/phpspreadsheet": "dev-NumberFormatMask-Helpers",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "^9.20"
     },
